syntax = "proto3";

package proto;

option go_package = "/proto/pb";

import "google/protobuf/timestamp.proto";

message Customer {
  uint64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone_number = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateCustomerRequestDTO {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone_number = 4;
}

message GetCustomerByIDRequestDTO {
  uint64 id = 1;
}

service CustomerService {
  rpc CreateCustomer(CreateCustomerRequestDTO) returns (Customer);
  rpc GetCustomerByID(GetCustomerByIDRequestDTO) returns (Customer);
}